--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -41,8 +41,10 @@
 <tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 <tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 <tr><td style="border: 1px solid black;">2024-07-13(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
-
   </table>
-  </body>
-  </html>
-  
+  <table>
+  </table>
+        <p> <a href="./index.html">MY PGM BLOG 2</a> </p>
+
+</body>
+</html>
