--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -44,7 +44,10 @@
   </table>
   <table>
   </table>
-        <p> <a href="./index.html">MY PGM BLOG 2</a> </p>
+
+  <li> <p> <a href="./index.html">MY PGM BLOG 2</a> </p></li>
+  <li> <p> <a href="../../index.html">MY BLOG</a> </p></li>
+
 
 </body>
 </html>
