--- a/MY_PGMB/pyhtml/my2_schedule_now.html
+++ b/MY_PGMB/pyhtml/my2_schedule_now.html
@@ -298,8 +298,8 @@ day_mapping = {
 }
 
 
-# HTML로 변환
-def gen_title(title):
+# HTML 상단 Title
+def gen_title_html(title):
   return f"""
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ko"&gt;
@@ -313,6 +313,12 @@ def gen_title(title):
     &lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
+"""
+
+# Table 상단 Title
+def gen_title_table(title):
+  return f"""
+&lt;h3&gt;{title}&lt;/h3&gt;
   &lt;table&gt;
 """
 
@@ -379,28 +385,35 @@ def gen_table(title, df, col_width):
 
 def gen_tail():
   return f"""
-  &lt;/table&gt;
-  &lt;/body&gt;
-  &lt;/html&gt;
-  """
+&lt;/body&gt;
+&lt;/html&gt;
+"""
 
 # 열 넓이 비율
-col_width = [14,5,11,40,30]  
+col_width = [18,5,11,40,26]  
 
-# 타이틀 (필수)
-html = gen_title(title)
-# Warning (선택)
-if (__istest__==True) and (os=="nt"):
+# HTML : 필수 : 타이틀
+html = gen_title_html(title)
+
+# HTML : 필수표 : 당월, 익월
+html += gen_title_table("필수 일정")           # 일정
+html += gen_table(title_1, df_1, col_width)  # 당월
+html += gen_table(title_2, df_2, col_width)  # 익월
+html += "  &lt;/table&gt;\n  &lt;br&gt;&lt;br&gt;\n"
+
+# HTML : 선택표 : Warning, 이후
+html += gen_title_table("선택 일정")           # 일정
+if (__istest__==True):  # and (os=="nt"):
+  # Warning (선택)
   if not df[ df['Date'] &lt; today ].empty:
     html += gen_table(title_0, df_0, col_width)
-# 당월 (필수)
-html += gen_table(title_1, df_1, col_width)
-# 익월 (필수)
-html += gen_table(title_2, df_2, col_width)
-# 이후 (선택)
-if (__istest__==True) and (os=="nt"):
-  html += gen_table(title_3, df_3, col_width)
-# 마무리 (필수)
+  # 이후 (선택)
+    html += gen_table(title_3, df_3, col_width)
+  
+# HTML : 필수 : 마무리
+html += "  &lt;/table&gt;\n  &lt;br&gt;\n"
+html += '  &lt;li&gt; &lt;p&gt; &lt;a href="./index.html"&gt;MY PGM BLOG 2&lt;/a&gt; &lt;/p&gt;&lt;/li&gt;\n'
+html += '  &lt;li&gt; &lt;p&gt; &lt;a href="../../index.html"&gt;MY BLOG&lt;/a&gt; &lt;/p&gt;&lt;/li&gt;\n'
 html += gen_tail()
 
 
