--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -11,17 +11,19 @@
     </style>
 </head>
 <body>
+
+<h3>필수 일정</h3>
   <table>
 
     <tr>
         <th colspan="5">이번달(2024-06) 일정</th>
     </tr>
     <tr>
-    <th style="width:14%; border: 1px solid black;">Date</th>
+    <th style="width:18%; border: 1px solid black;">Date</th>
 <th style="width:5%; border: 1px solid black;">Num</th>
 <th style="width:11%; border: 1px solid black;">Cycle</th>
 <th style="width:40%; border: 1px solid black;">Memo</th>
-<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
 <tr><td style="border: 1px solid black;">2024-06-13(목)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-06-16(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
@@ -31,23 +33,52 @@
         <th colspan="5">다음달(2024-07) 일정</th>
     </tr>
     <tr>
-    <th style="width:14%; border: 1px solid black;">Date</th>
+    <th style="width:18%; border: 1px solid black;">Date</th>
 <th style="width:5%; border: 1px solid black;">Num</th>
 <th style="width:11%; border: 1px solid black;">Cycle</th>
 <th style="width:40%; border: 1px solid black;">Memo</th>
-<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
 <tr><td style="border: 1px solid black;">2024-07-04(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 <tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 <tr><td style="border: 1px solid black;">2024-07-13(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
   </table>
-  <table>
-  </table>
+  <br><br>
 
+<h3>선택 일정</h3>
+  <table>
+
+    <tr>
+        <th colspan="5">Warning</th>
+    </tr>
+    <tr>
+    <th style="width:18%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
+</tr>
+<tr><td style="border: 1px solid black;">2024-06-13(목)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-16(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-06-23(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+
+    <tr>
+        <th colspan="5">이후 일정</th>
+    </tr>
+    <tr>
+    <th style="width:18%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
+</tr>
+<tr><td style="border: 1px solid black;">2024-09-04(수)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">2nd 2 Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-24(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">B</td><td style="border: 1px solid black;">This Year</td></tr>
+  </table>
+  <br>
   <li> <p> <a href="./index.html">MY PGM BLOG 2</a> </p></li>
   <li> <p> <a href="../../index.html">MY BLOG</a> </p></li>
-
 
 </body>
 </html>
