--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -7,6 +7,7 @@
     <style>
         table { width: 100%; border-collapse: collapse; }
         th, td { border: 1px solid black; text-align: center; }
+        h3 { color: blue;}
         th[colspan="5"] { text-align: center; color: red;}
     </style>
 </head>
