--- a/MY_PGMB/pyhtml/my_schedule_output.html
+++ b/MY_PGMB/pyhtml/my_schedule_output.html
@@ -7,52 +7,58 @@
     <style>
         table { width: 100%; border-collapse: collapse; }
         th, td { border: 1px solid black; text-align: center; }
+        h3 { color: blue;}
         th[colspan="5"] { text-align: center; color: red;}
     </style>
 </head>
 <body>
+
+<h3>필수 일정</h3>
   <table>
 
     <tr>
         <th colspan="5">이번달(2024-06) 일정</th>
     </tr>
     <tr>
-    <th style="width:14%; border: 1px solid black;">Date</th>
+    <th style="width:18%; border: 1px solid black;">Date</th>
 <th style="width:5%; border: 1px solid black;">Num</th>
 <th style="width:11%; border: 1px solid black;">Cycle</th>
 <th style="width:40%; border: 1px solid black;">Memo</th>
-<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
-<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY : 4주 PLAN</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 4주마다 1권</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-24</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">만기2낙원</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-06-28</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">이체(24.1.10,25.3.16,28.1.3,나머지250)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-30</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 1개월마다 X곳</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-30</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
 
     <tr>
         <th colspan="5">다음달(2024-07) 일정</th>
     </tr>
     <tr>
-    <th style="width:14%; border: 1px solid black;">Date</th>
+    <th style="width:18%; border: 1px solid black;">Date</th>
 <th style="width:5%; border: 1px solid black;">Num</th>
 <th style="width:11%; border: 1px solid black;">Cycle</th>
 <th style="width:40%; border: 1px solid black;">Memo</th>
-<th style="width:30%; border: 1px solid black;">CycleMemo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
-<tr><td style="border: 1px solid black;">2024-07-02</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">158</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-04</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS(격월10일)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과 18시 (8.23)</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-07-13</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-14</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-19</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">This Year</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-21</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY : 4주 PLAN</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-21</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 4주마다 1권</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-28</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">이체(24.1.10,25.3.16,28.1.3,나머지250)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-07-30</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 1개월마다 X곳</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
-
+<tr><td style="border: 1px solid black;">2024-07-01(월)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">만기2낙원, 만기지남</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-02(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">158</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-04(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS(격월10일)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-07(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과 18시 (8.23)</td><td style="border: 1px solid black;"></td></tr>
+<tr><td style="border: 1px solid black;">2024-07-13(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-14(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-14(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY : 4주 PLAN, 종료일</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-14(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-15(월)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 잠시쉬다</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-19(금)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">This Year</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-26(금)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">이체(24.1.10,25.3.16,28.1.3,나머지250)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-30(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 잠시쉬다, 7월 보류</td><td style="border: 1px solid black;">This Month</td></tr>
   </table>
-  </body>
-  </html>
-  
+  <br><br>
+
+<h3>선택 일정</h3>
+  <table>
+  </table>
+  <br>
+  <p> <a href="https://new-sk.github.io/new2/MY_PGMB/pyhtml/index.html">MY PGM BLOG 2</a> </p>
+  <p> <a href="https://new-sk.github.io/new2/">MY BLOG</a> </p>
+
+</body>
+</html>
