--- a/MY_PGMB/pyhtml/my2_schedule_now.html
+++ b/MY_PGMB/pyhtml/my2_schedule_now.html
@@ -14,11 +14,11 @@
 </span>
 <pre>
 </pre>
-<span style="color:red;"># WOW NOT : 소스 별도 보관 : 소스, 인풋, 아웃풋
+<span style="color:red;"># WOW NOT : 표가 아닌 달력으로 표기하면 어떻까?
 </span>
 <pre>
 </pre>
-<span style="color:red;"># WOW NOT : 실적 파일 별도 관리 (아웃품과 또 다른)
+<span style="color:red;"># WOW NOT : 실적 파일 별도 관리 (아웃품과 또 다른) : DataFrameApp과 연동
 </span>
 <pre>
 
@@ -28,7 +28,7 @@ import os
 import sys
 my_home, my_file = os.path.split(__file__)
 my_lhome = 'D:\MY_BLOG_LOCAL_HOME\py'
-my_src_file = '/my_schedule_input.txt'
+my_src_file = '/my2_schedule_input.txt'
 
 print(my_home, my_file)
 print(my_lhome,my_src_file)
@@ -45,17 +45,17 @@ if (__istest__==False) and (os!="nt") :
 elif (__istest__==False) and (os=="nt") :
   my_src_dir = my_lhome
   my_desc_dir = my_home
-  my_desc_file = '/../pyhtml/my_schedule_output.html'
+  my_desc_file = '/../pyhtml/my2_schedule_output.html'
 # TEST Home / Full Version
 elif  (__istest__==True) and (os=="nt") :
   my_src_dir = my_lhome
   my_desc_dir = my_lhome
-  my_desc_file = '/my_schedule_output2.html'
+  my_desc_file = '/my2_schedule_output2.html'
 # TEST Not Home / Short Version
 elif  (__istest__==True) and (os!="nt") :
   my_src_dir = my_home
   my_desc_dir = my_home
-  my_desc_file = '/../pyhtml/my_schedule_output2.html'
+  my_desc_file = '/../pyhtml/my2_schedule_output2.html'
 
 from datetime import datetime
 from dateutil.relativedelta import relativedelta  # 윤년 고려
@@ -64,7 +64,10 @@ import tkinter as tk
 from tkinter import ttk
 from tkinter import messagebox
 
-# DataFrameApp은 챗GPT로 작성
+</pre>
+<span style="color:red;"># WOW : DataFrameApp은 챗GPT로 작성
+</span>
+<pre>
 class DataFrameApp:
     def __init__(self, root, df):
         self.root = root
@@ -133,7 +136,7 @@ def show_df_window(df):
 
 import pandas as pd
 # CSV 파일을 읽어서 데이터프레임에 저장
-#df = pd.read_csv(my_dir + '/my_schedule_input.txt')
+#df = pd.read_csv(my_dir + '/my2_schedule_input.txt')
 df = pd.read_csv(my_src_dir + my_src_file, converters={'Date': lambda x: pd.to_datetime(x, format='%Y.%m.%d')})
 df['CycleMemo'] = ''
 print(type(df), df)
@@ -221,13 +224,19 @@ dfw = pd.concat([dfw,dfw2])
 #print(dfw)
 
 
-# ONE-Time, Irregular PLAN
-# 있는 그대로 복사
-print("ONE-Time, Irregular Plan")
-dfone = df[(df['Cycle'] == 'O') | (df['Cycle'] == 'X' )]
+# ONE-Time PLAN : 있는 그대로 복사
+print("ONE-Time Plan")
+dfone = df[(df['Cycle'] == 'O')]
 
 
-### TOTAL
+# Irregular PLAN : 있는 그대로 복사
+# 별도 분리 생성
+print("Irregular Plan")
+title_x = "Irregular : 비공식 일정"
+df_x = df[(df['Cycle'] == 'X')].copy()
+
+
+### TOTAL : X(Irregular 제외)
 df = pd.concat([dfy,dfm,dfw,dfone])
 df = df.sort_values("Date")
 df = df.reset_index(drop=True)   # re-index
@@ -241,11 +250,11 @@ print(df)
 <pre>
 # Define &amp; Apply the mapping
 cycle_mapping = {
-    "W": "Weekly",
-    "M": "Monthly",
-    "Y": "Yearly",
-    "O": "One-Time",
-    "X": "Irregular"
+    "W": "Weekly",     # 주간
+    "M": "Monthly",    # 월간
+    "Y": "Yearly",     # 년간
+    "O": "One-Time",   # 1회성
+    "X": "X"           # 비공식 활동 (이놈만 안 바꿈, 이후에도 X값을 활용하여 처리중)
 }
 
 df["Cycle"] = df["Cycle"].map(cycle_mapping)
@@ -266,24 +275,24 @@ else :
 
 
 # Warning 
-title_0 = "Warning"
-df_0 = df[ df['Date'] &lt; today ].copy()
+title_0 = "Warning : 이전 일정"
+df_0 = df[ (df['Date'] &lt; today) &amp; (df['Cycle'] != 'X')].copy()
 #df_0['Date'] = df_0['Date'].dt.strftime('%Y-%m-%d')
 
 # This Month
 title_1 = "이번달(" + today.strftime('%Y-%m') + ") 일정"
-df_1 = df[ (df['Date'].dt.year == today.year) &amp; (df['Date'].dt.month == today.month) ].copy()
+df_1 = df[ (df['Date'].dt.year == today.year) &amp; (df['Date'].dt.month == today.month)].copy()
 #df_1['Date'] = df_1['Date'].dt.strftime('%Y-%m-%d')
 
 # Next Month
 nextm_day = today + relativedelta(months=1)
 title_2 = "다음달(" + nextm_day.strftime('%Y-%m') + ") 일정"
-df_2 = df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month) ].copy()
+df_2 = df[ (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month == nextm_day.month)].copy()
 #df_2['Date'] = df_2['Date'].dt.strftime('%Y-%m-%d')
 
 # 이후 일정
 title_3 = "이후 일정"
-df_3 = df[ (df['Date'].dt.year &gt; nextm_day.year)  |  (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month &gt; nextm_day.month) ].sort_values(by=["Date"], ascending=[True]).copy()
+df_3 = df[ (df['Date'].dt.year &gt; nextm_day.year)  |  (df['Date'].dt.year == nextm_day.year) &amp; (df['Date'].dt.month &gt; nextm_day.month)].sort_values(by=["Date"], ascending=[True]).copy()
 #df_3['Date'] = df_3['Date'].dt.strftime('%Y-%m-%d')
 
 
@@ -309,6 +318,7 @@ def gen_title_html(title):
     &lt;style&gt;
         table {{ width: 100%; border-collapse: collapse; }}
         th, td {{ border: 1px solid black; text-align: center; }}
+        h3 {{ color: blue;}}
         th[colspan="5"] {{ text-align: center; color: red;}}
     &lt;/style&gt;
 &lt;/head&gt;
@@ -396,24 +406,29 @@ col_width = [18,5,11,40,26]
 html = gen_title_html(title)
 
 # HTML : 필수표 : 당월, 익월
-html += gen_title_table("필수 일정")           # 일정
+html += gen_title_table("필수 일정")          # 일정
 html += gen_table(title_1, df_1, col_width)  # 당월
 html += gen_table(title_2, df_2, col_width)  # 익월
 html += "  &lt;/table&gt;\n  &lt;br&gt;&lt;br&gt;\n"
 
 # HTML : 선택표 : Warning, 이후
-html += gen_title_table("선택 일정")           # 일정
 if (__istest__==True):  # and (os=="nt"):
+  html += gen_title_table("선택 일정")           # 일정
   # Warning (선택)
-  if not df[ df['Date'] &lt; today ].empty:
+  if not df_0.empty:
     html += gen_table(title_0, df_0, col_width)
+  # Irregular (선택)
+  if not df_x.empty:
+    html += gen_table(title_x, df_x, col_width)
   # 이후 (선택)
-    html += gen_table(title_3, df_3, col_width)
+  html += gen_table(title_3, df_3, col_width)
   
 # HTML : 필수 : 마무리
 html += "  &lt;/table&gt;\n  &lt;br&gt;\n"
-html += '  &lt;li&gt; &lt;p&gt; &lt;a href="./index.html"&gt;MY PGM BLOG 2&lt;/a&gt; &lt;/p&gt;&lt;/li&gt;\n'
-html += '  &lt;li&gt; &lt;p&gt; &lt;a href="../../index.html"&gt;MY BLOG&lt;/a&gt; &lt;/p&gt;&lt;/li&gt;\n'
+html += '  &lt;p&gt; &lt;a href="https://new-sk.github.io/new2/MY_PGMB/pyhtml/index.html"&gt;MY PGM BLOG 2&lt;/a&gt; &lt;/p&gt;\n'
+html += '  &lt;p&gt; &lt;a href="https://new-sk.github.io/new2/"&gt;MY BLOG&lt;/a&gt; &lt;/p&gt;\n'
+if (__istest__==True) and (os=="nt"):
+  html += '  &lt;p&gt; &lt;a href="../MyBlogLocalHome.html"&gt;MY Local BLOG&lt;/a&gt; &lt;/p&gt;\n'
 html += gen_tail()
 
 
