--- a/MY_PGMB/pyhtml/my_schedule_output2.html
+++ b/MY_PGMB/pyhtml/my_schedule_output2.html
@@ -17,21 +17,7 @@
   <table>
 
     <tr>
-        <th colspan="5">이번달(2024-06) 일정</th>
-    </tr>
-    <tr>
-    <th style="width:18%; border: 1px solid black;">Date</th>
-<th style="width:5%; border: 1px solid black;">Num</th>
-<th style="width:11%; border: 1px solid black;">Cycle</th>
-<th style="width:40%; border: 1px solid black;">Memo</th>
-<th style="width:26%; border: 1px solid black;">CycleMemo</th>
-</tr>
-<tr><td style="border: 1px solid black;">2024-06-13(목)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-16(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-06-23(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
-
-    <tr>
-        <th colspan="5">다음달(2024-07) 일정</th>
+        <th colspan="5">이번달(2024-07) 일정</th>
     </tr>
     <tr>
     <th style="width:18%; border: 1px solid black;">Date</th>
@@ -42,8 +28,18 @@
 </tr>
 <tr><td style="border: 1px solid black;">2024-07-04(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-07-09(화)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">Irregular</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 <tr><td style="border: 1px solid black;">2024-07-13(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
+
+    <tr>
+        <th colspan="5">다음달(2024-08) 일정</th>
+    </tr>
+    <tr>
+    <th style="width:18%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
+</tr>
   </table>
   <br><br>
 
@@ -51,7 +47,7 @@
   <table>
 
     <tr>
-        <th colspan="5">Warning</th>
+        <th colspan="5">Warning : 이전 일정</th>
     </tr>
     <tr>
     <th style="width:18%; border: 1px solid black;">Date</th>
@@ -63,6 +59,19 @@
 <tr><td style="border: 1px solid black;">2024-06-13(목)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-06-16(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
 <tr><td style="border: 1px solid black;">2024-06-23(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-07-04(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS</td><td style="border: 1px solid black;">This Month</td></tr>
+
+    <tr>
+        <th colspan="5">Irregular : 비공식 일정</th>
+    </tr>
+    <tr>
+    <th style="width:18%; border: 1px solid black;">Date</th>
+<th style="width:5%; border: 1px solid black;">Num</th>
+<th style="width:11%; border: 1px solid black;">Cycle</th>
+<th style="width:40%; border: 1px solid black;">Memo</th>
+<th style="width:26%; border: 1px solid black;">CycleMemo</th>
+</tr>
+<tr><td style="border: 1px solid black;">2024-06-09(일)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">X</td><td style="border: 1px solid black;">치과</td><td style="border: 1px solid black;"></td></tr>
 
     <tr>
         <th colspan="5">이후 일정</th>
@@ -78,8 +87,8 @@
 <tr><td style="border: 1px solid black;">2024-09-24(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">B</td><td style="border: 1px solid black;">This Year</td></tr>
   </table>
   <br>
-  <li> <p> <a href="./index.html">MY PGM BLOG 2</a> </p></li>
-  <li> <p> <a href="../../index.html">MY BLOG</a> </p></li>
+  <p> <a href="https://new-sk.github.io/new2/MY_PGMB/pyhtml/index.html">MY PGM BLOG 2</a> </p>
+  <p> <a href="https://new-sk.github.io/new2/">MY BLOG</a> </p>
 
 </body>
 </html>
