--- a/MY_PGMB/pyhtml/12.html
+++ b/MY_PGMB/pyhtml/12.html
@@ -9,5 +9,7 @@
 <p><a href="../contensts/B0000002.pdf">B0000002. 당신도 빅뱅을 믿나요</a></p>
 <p><a href="../contensts/B0000003.pdf">B0000003. DNA의 배신_암</a></p>
 <p><a href="../contensts/B0000004.pdf">B0000004. 지구가 찿는 것도 한계가 있다</a></p>
+<p><a href="../contensts/B0000005.pdf">B0000005. 삶의 지혜를 죽음에게 묻다 (강의)</a></p>
+<p><a href="../contensts/B0000006.pdf">B0000006. 진정한 행복의 7가지 조건 (강의)</a></p>
 </body>
 </html>
