--- a/MY_PGMB/py/my9_stock.html
+++ b/MY_PGMB/py/my9_stock.html
@@ -104,6 +104,23 @@
 <p>입출금 내역</p>
 </li>
 </ul>
+<p><strong>진행현황</strong></p>
+<ul>
+<li>7월5주
+<ul>
+<li>모드에 따른 전체 가져오기</li>
+<li>이번주 자료가 가져오기</li>
+<li>특정날짜 정보만 추출하기</li>
+</ul>
+</li>
+<li>8월1주
+<ul>
+<li>설정파일 만들기</li>
+<li>설정파일 정보 읽어오기 (설정파일자체, 추가파일)</li>
+<li></li>
+</ul>
+</li>
+</ul>
 
         
         
