--- a/MY_PGMB/pyhtml/my3_py_html.html
+++ b/MY_PGMB/pyhtml/my3_py_html.html
@@ -45,8 +45,8 @@ def gen_tail():
 
 #########################
 ### 소스 파일 리스트
-my_pyname = ["my2_schedule_now","my1_pgmb_v2","my3_py_html"]
-my_pydesc = ["일정관리","블로그만들기","소스보기"]
+my_pyname = ["my2_schedule_now","my1_pgmb_v2","my3_py_html","my9_stock"]
+my_pydesc = ["일정관리","블로그만들기","소스보기","투자관리"]
 
 #########################
 ### 파이썬 소스 index file
