--- a/MY_PGMB/pyhtml/my2_schedule_now.html
+++ b/MY_PGMB/pyhtml/my2_schedule_now.html
@@ -22,7 +22,7 @@
 </span>
 <pre>
 
-__istest__ = True
+__istest__ = False
 
 import os
 import sys
@@ -233,7 +233,7 @@ dfone = df[(df['Cycle'] == 'O')]
 # 별도 분리 생성
 print("Irregular Plan")
 title_x = "Irregular : 비공식 일정"
-df_x = df[(df['Cycle'] == 'X')].copy()
+df_x = df[(df['Cycle'] == 'X')].copy().sort_values("Date")
 
 
 ### TOTAL : X(Irregular 제외)
@@ -414,14 +414,14 @@ html += "  &lt;/table&gt;\n  &lt;br&gt;&lt;br&gt;\n"
 # HTML : 선택표 : Warning, 이후
 if (__istest__==True):  # and (os=="nt"):
   html += gen_title_table("선택 일정")           # 일정
-  # Warning (선택)
-  if not df_0.empty:
-    html += gen_table(title_0, df_0, col_width)
   # Irregular (선택)
   if not df_x.empty:
-    html += gen_table(title_x, df_x, col_width)
+    html += gen_table("1. " + title_x, df_x, col_width)
+  # Warning (선택)
+  if not df_0.empty:
+    html += gen_table("2. " + title_0, df_0, col_width)
   # 이후 (선택)
-  html += gen_table(title_3, df_3, col_width)
+  html += gen_table("3. " + title_3, df_3, col_width)
   
 # HTML : 필수 : 마무리
 html += "  &lt;/table&gt;\n  &lt;br&gt;\n"
