--- a/MY_PGMB/pyhtml/my_pysource.html
+++ b/MY_PGMB/pyhtml/my_pysource.html
@@ -10,6 +10,7 @@
 <p><a href="../pyhtml/my2_schedule_now.html">일정관리</a></p>
 <p><a href="../pyhtml/my1_pgmb_v2.html">블로그만들기</a></p>
 <p><a href="../pyhtml/my3_py_html.html">소스보기</a></p>
+<p><a href="../pyhtml/my9_stock.html">투자관리</a></p>
 
 </body>
 </html>
