--- a/MY_PGMB/pyhtml/19.html
+++ b/MY_PGMB/pyhtml/19.html
@@ -7,6 +7,9 @@
 <body>
 <br>
 <h4>2024년</h4>
+<p><a href="../../book/book_0136.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
+<p><a href="../../book/book_0135.html">135. 수학의 힘 (작성중)</a></p>
+<p><a href="../../book/book_0134.html">134. 미술관 출입증 (작성중)</a></p>
 <p><a href="../../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
 <p><a href="../../book/book_0132.html">132. 더 플로</a></p>
 <p><a href="../../book/book_0131.html">131. 격차사회</a></p>
