--- a/MY_PGMB/py/my9_stock.html
+++ b/MY_PGMB/py/my9_stock.html
@@ -144,27 +144,23 @@
 <p>종목별 가격</p>
 <ul>
 <li>모드 : Test/Real</li>
-<li>종목 : 종목코드, 종목명, 종목약어명</li>
-<li>가격 : 종목코드, 일자, 가격</li>
 <li>종목정보가져오기(sCode,'FILE')</li>
 <li>종목정보가져오기(sCode,'DF')</li>
 <li>종목최근정보가져오기(Recently)</li>
 </ul>
 </li>
 <li>
-<p>매매 내역 : 매수 / 매도 매핑 : 꿀리는대로. 필요시조정</p>
+<p>데이터</p>
 <ul>
-<li>계좌 : 계좌구분, 계좌설명, 예수금</li>
-<li>매매 : 매매번호, 계좌구분, 매매구분, 종목코드, 단가, 수량, 매매금액(derived), 수수료(세금), 거래금액(derived)</li>
-<li>매매매핑 : 매매매핑번호, 매수번호, 매도번호, 수량, 매수거래금액, 매도거래금액, 수익금(derived), 수익률(derived)</li>
-<li>잔고 : 계좌구분, 종목코드, 수량, 매입금액, 평균단가(derived)</li>
+<li>종목(Item) : 종목코드(siCode), 종목명(siName), 종목약어명</li>
+<li>가격(Price) : 종목코드(spCode), 일자(spDate), 가격(spPrice)</li>
+<li>계좌(Account) : 계좌코드(saAccount), 계좌설명(saName), 예수금(saAmt), 계좌구분</li>
+<li>입출금(Deposit&amp;Withdrawal) : 입금계좌(sdAccount), 출금계좌(swAccount), 구분(sdwType : D, W, X), 비고</li>
+<li>목표수익률(Yield) : 년도(syYear), 수익률(syYield)</li>
+<li>배당금(Dividends) : 종목코드(sdCode), 배당금(sdAmt), 배당금세전(sdAmtBf), 배당금세금(sdamtTax), 배당일자(sdDate), 주당배당금(sdPer)</li>
+<li>매매(Trade) : 매매번호(stNo,2024-XXX), 매매구분(stType: B, S), 계죄코드(stAccount), 종목코드(stCode), 거래수량(stQty), 단가(stAmtUnit), 거래금액(stAmt), 거래금액세전(stAmtBf),  거래세금(stAmtTax), 상태(stStatus:0 X, 1...n), 잔고수량(stQtyRemain), 잔고금액(stAmtRemain)</li>
+<li>매도매핑(Mapping) : 매도번호(smNoS), 매수번호(smNoB), 수량(smQty), 단가(smAmtUnit), 매수금액(smAmtB), 매도금액(smAmtS), 수익금(smProfit), 매수도일련번호</li>
 </ul>
-</li>
-<li>
-<p>배당금 내역 / 분배금</p>
-</li>
-<li>
-<p>입출금 내역</p>
 </li>
 </ul>
 <p><strong>진행현황</strong></p>
