--- a/MY_PGMB/py/my9_stock.html
+++ b/MY_PGMB/py/my9_stock.html
@@ -150,6 +150,14 @@
 </ul>
 </li>
 <li>
+<p>초기데이터 구축방법 검토 필요</p>
+<ul>
+<li>2023년말</li>
+<li>2024 진행사항</li>
+<li>현재 사항</li>
+</ul>
+</li>
+<li>
 <p>데이터</p>
 <ul>
 <li>종목(Item) : 종목코드(siCode), 종목명(siName), 종목약어명</li>
@@ -176,7 +184,7 @@
 <ul>
 <li>설정파일 읽기 (INI)</li>
 <li>기초 데이터 읽기 (TXT -&gt; XLXS)</li>
-<li>XLXS 기초 데이터 읽기 (컬럼 -&gt; 이름영역) (검토중)</li>
+<li>XLXS 기초 데이터 읽기 (컬럼 -&gt; 이름영역) (그냥 컬럼으로 읽는 것으로 하려함)</li>
 </ul>
 </li>
 </ul>
