--- a/MY_PGMB/pyhtml/my2_schedule_output.html
+++ b/MY_PGMB/pyhtml/my2_schedule_output.html
@@ -26,15 +26,9 @@
 <th style="width:40%; border: 1px solid black;">Memo</th>
 <th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
-<tr><td style="border: 1px solid black;">2024-08-09(금)</td><td style="border: 1px solid black;">0</td><td style="border: 1px solid black;">One-Time</td><td style="border: 1px solid black;">싱</td><td style="border: 1px solid black;"></td></tr>
-<tr><td style="border: 1px solid black;">2024-08-11(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY 4주 완료 : Stock</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-13(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-14(수)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-18(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 다시시작</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-18(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-18(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 다시시작</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-22(목)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">SW(만기9.2)</td><td style="border: 1px solid black;">This Year</td></tr>
-<tr><td style="border: 1px solid black;">2024-08-25(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-08-25(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY 4주 완료 : Stock</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-08-25(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 다시시작</td><td style="border: 1px solid black;">This Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-08-25(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">This Week</td></tr>
 
     <tr>
         <th colspan="5">다음달(2024-09) 일정</th>
@@ -46,15 +40,16 @@
 <th style="width:40%; border: 1px solid black;">Memo</th>
 <th style="width:26%; border: 1px solid black;">CycleMemo</th>
 </tr>
+<tr><td style="border: 1px solid black;">2024-09-01(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">2nd 1 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-01(일)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 다시시작</td><td style="border: 1px solid black;">This Month</td></tr>
 <tr><td style="border: 1px solid black;">2024-09-04(수)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">GAS(격월10일)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-09-08(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY 4주 완료 : Stock</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
 <tr><td style="border: 1px solid black;">2024-09-09(월)</td><td style="border: 1px solid black;">2</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">CAR(10.09 전후1개월)</td><td style="border: 1px solid black;">This Year</td></tr>
 <tr><td style="border: 1px solid black;">2024-09-10(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">Y-</td><td style="border: 1px solid black;">This Year</td></tr>
 <tr><td style="border: 1px solid black;">2024-09-13(금)</td><td style="border: 1px solid black;">3</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">가정의학과(2주전)</td><td style="border: 1px solid black;">This Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-09-13(금)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-09-14(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
-<tr><td style="border: 1px solid black;">2024-09-15(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 다시시작</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
-<tr><td style="border: 1px solid black;">2024-09-18(수)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">성지 : 다시시작</td><td style="border: 1px solid black;">2nd 1 Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-13(금)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Bf) : 예금자동만기(8.13,3백)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-14(토)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Monthly</td><td style="border: 1px solid black;">Card(Af)</td><td style="border: 1px solid black;">This Month</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-22(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">STUDY 4주 완료 : Stock</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
+<tr><td style="border: 1px solid black;">2024-09-22(일)</td><td style="border: 1px solid black;">4</td><td style="border: 1px solid black;">Weekly</td><td style="border: 1px solid black;">독서 : 다시시작</td><td style="border: 1px solid black;">2nd 4 Week</td></tr>
 <tr><td style="border: 1px solid black;">2024-09-24(화)</td><td style="border: 1px solid black;">1</td><td style="border: 1px solid black;">Yearly</td><td style="border: 1px solid black;">Y</td><td style="border: 1px solid black;">This Year</td></tr>
   </table>
   <br><br>
