--- a/MY_PGMB/pyhtml/index.html
+++ b/MY_PGMB/pyhtml/index.html
@@ -29,5 +29,6 @@
 <p><a href="./21.html">SW자산관리사(C-SAM)</a></p>
 <br><h4>상식</h4>
 <p><a href="./12.html">차이나는 클라스</a></p>
+<p><a href="./28.html">기타등등</a></p>
 </body>
 </html>
