--- a/MY_PGMB/pyhtml/28.html
+++ b/MY_PGMB/pyhtml/28.html
@@ -7,5 +7,6 @@
 <body>
 <p><a href=".././conhtml/C0000001.html">안과</a></p>
 <p><a href=".././conhtml/C0000002.html">노인내과</a></p>
+<p><a href=".././conhtml/C0000003.html">한국의 잃어버릴 30년 (박석중)</a></p>
 </body>
 </html>
