--- a/MY_PGMB/pyhtml/28.html
+++ b/MY_PGMB/pyhtml/28.html
@@ -9,5 +9,6 @@
 <p><a href=".././conhtml/C0000002.html">노인내과</a></p>
 <p><a href=".././conhtml/C0000003.html">한국의 잃어버릴 30년 (박석중)</a></p>
 <p><a href=".././conhtml/C2409141.html">금투세 유예 외치는 이유 (이언주)</a></p>
+<p><a href=".././conhtml/C2409181.html">중국 디플레이션 (안유화_815머니톡)</a></p>
 </body>
 </html>
