--- a/MY_PGMB/pyhtml/28.html
+++ b/MY_PGMB/pyhtml/28.html
@@ -9,5 +9,6 @@
 <p><a href=".././conhtml/C0000002.html">노인내과</a></p>
 <p><a href=".././conhtml/C0000003.html">한국의 잃어버릴 30년 (박석중)</a></p>
 <p><a href=".././conhtml/C2409141.html">금투세 유예 외치는 이유 (이언주)</a></p>
+<p><a href="../../eco/eco_0100.html">연준_몸과 마음이 따로 노는 이유 (문홍철_연합뉴스_20240126)</a></p>
 </body>
 </html>
