MY1 240922L DEL Doc

--- a/MY_PGMB/pyhtml/28.html
+++ b/MY_PGMB/pyhtml/28.html
@@ -9,5 +9,20 @@
 <p><a href=".././conhtml/C0000002.html">노인내과</a></p>
 <p><a href=".././conhtml/C0000003.html">한국의 잃어버릴 30년 (박석중)</a></p>
 <p><a href=".././conhtml/C2409141.html">금투세 유예 외치는 이유 (이언주)</a></p>
+<p><a href=".././conhtml/C2409181.html">중국 디플레이션 (안유화_815머니톡)</a></p>
+<p><a href="../../eco/eco_0100.html">연준_몸과 마음이 따로 노는 이유 (문홍철_연합뉴스_20240126)</a></p>
+<p><a href="../../docu/docu_0016.html">Doc0016. 이렇게 계획 세우면 저절로 부지런해집니다. (삼프로 _ 김결일의 지혜의 밤 11화)</a></p>
+<p><a href="../../docu/docu_0011.html">Doc0011. 메가스터디 _ 손주은 _ 삼프로TV</a></p>
+<p><a href="../../docu/docu_0012.html">Doc0012. KBS 새해맞이 특별강연. 문화심리학자 김정운</a></p>
+<p><a href="../../docu/docu_0013.html">Doc0013. 2023.08 유튜브</a></p>
+<p><a href="../../docu/docu_0014.html">Doc0014. 2023.09 유튜브</a></p>
+<p><a href="../../docu/docu_0015.html">Doc0015. ChatGPT 관련 강의 : 인문학</a></p>
+<p><a href="../../docu/docu_0001.html">Doc0001. 다이어트 혁명 (EBS 다큐프라임)</a></p>
+<p><a href="../../docu/docu_0002.html">Doc0002. 시험 (EBS 다큐프라임) (18.06.06)</a></p>
+<p><a href="../../docu/docu_0005.html">Doc0005. 대통령은 누구인가 (EBS 다큐프라임) (17.06.29)</a></p>
+<p><a href="../../docu/docu_0006.html">Doc0006. 2017 시대탐구 청년 평범하고 싶다 (EBS 다큐프라임) (17.05.01)</a></p>
+<p><a href="../../docu/docu_0007.html">Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
+<p><a href="../../docu/docu_0008.html">Doc0008. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23)</a></p>
+<p><a href="../../docu/docu_0009.html">Doc0009. 거대한 균열 (2022 KBS신년특집) (22.01.10)</a></p>
 </body>
 </html>
