MY1 240922L DEL News&Etc

--- a/MY_PGMB/pyhtml/28.html
+++ b/MY_PGMB/pyhtml/28.html
@@ -24,5 +24,26 @@
 <p><a href="../../docu/docu_0007.html">Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
 <p><a href="../../docu/docu_0008.html">Doc0008. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23)</a></p>
 <p><a href="../../docu/docu_0009.html">Doc0009. 거대한 균열 (2022 KBS신년특집) (22.01.10)</a></p>
+<p><a href="../../news/news_0010.html">News0010. 등대공장</a></p>
+<p><a href="../../news/news_0001.html">News0001. 자바전쟁</a></p>
+<p><a href="../../news/news_0002.html">News0002. AI와 암묵지</a></p>
+<p><a href="../../news/news_0003.html">News0003. 코털</a></p>
+<p><a href="../../news/news_0004.html">News0004. 짐로저스</a></p>
+<p><a href="../../news/news_0005.html">News0005. 하버드생 달력</a></p>
+<p><a href="../../news/news_0006.html">News0006. 인도인구</a></p>
+<p><a href="../../news/news_0007.html">News0007. 저물가종료</a></p>
+<p><a href="../../news/news_0008.html">News0008. 셧다운제</a></p>
+<p><a href="../../news/news_0009.html">News0009. 그린플레이션</a></p>
+<p><a href="../../news/news_0011.html">News0011. 자산거품</a></p>
+<p><a href="../../news/news_0012.html">News0012. 가계부채:금융안정보고서(21.9)</a></p>
+<p><a href="../../news/news_0013.html">News0013. 인증서</a></p>
+<p><a href="../../etc/etc_7004.html">Etc7004. 내부회계</a></p>
+<p><a href="../../etc/etc_8001.html">Etc8001. 리더진단</a></p>
+<p><a href="../../etc/etc_8002.html">Etc8002. 필수교육</a></p>
+<p><a href="../../etc/etc_8003.html">Etc8003. 안전</a></p>
+<p><a href="../../etc/etc_9003.html">Etc9003. FP</a></p>
+<p><a href="../../etc/etc_9004.html">Etc9004. KUDU</a></p>
+<p><a href="../../etc/etc_9005.html">Etc9005. P2E</a></p>
+<p><a href="../../etc/etc_9006.html">Etc9006. 개인정보</a></p>
 </body>
 </html>
