--- a/MY_PGMB/pyhtml/index.html
+++ b/MY_PGMB/pyhtml/index.html
@@ -5,6 +5,9 @@
     <title>MY PGM BLOG</title>
 </head>
 <body>
+<br><h4>My STUDY</h4>
+<p><a href="./30.html">Study</a></p>
+<p><a href="./31.html">비전공자를 위한 첫 코딩</a></p>
 <br><h4>기본 컴퓨터 </h4>
 <p><a href="./10.html">Office</a></p>
 <br><h4>개발언어 </h4>
@@ -30,5 +33,6 @@
 <br><h4>상식</h4>
 <p><a href="./12.html">차이나는 클라스</a></p>
 <p><a href="./28.html">기타등등</a></p>
+<p><a href="./29.html">영화</a></p>
 </body>
 </html>
