--- a/MY_PGMB/conhtml/C2409291.html
+++ b/MY_PGMB/conhtml/C2409291.html
@@ -141,17 +141,22 @@
             <h2 id="my-pgm-log">MY PGM LOG</h2>
 <h3 id="to-do-list">TO-DO LIST</h3>
 <ul>
-<li>MY1 : 디렉토리 구조 정리</li>
-<li>MY1 : 데이터 구조 정리</li>
+<li>MY1 : 디렉토리/데이터 구조 정리</li>
 <li>MY9 : 엑셀에서 읽는 것말고, 텍스트에서 읽는 것으로도 작성</li>
 <li>MY2 : 목록형 일정에서 달력구조 일정</li>
 </ul>
 <h3 id="my2-일정관리">MY2 일정관리</h3>
-<h3 id="my1-블로그">MY1 블로그</h3>
+<h3 id="my10-블로그">MY10 블로그</h3>
 <ul>
 <li>24.09.23
 <ul>
 <li>PGM으로 정리되지 않은 블로그 내역들 정리 (모든 것을 PGM에서 만드는 것으로 변경)</li>
+</ul>
+</li>
+<li>리팩토링
+<ul>
+<li>24.09.29 : 착수</li>
+<li>24.10.01 : Group 부분 정리 완료</li>
 </ul>
 </li>
 </ul>
