--- a/MY_PGMB/pyhtml/25.html
+++ b/MY_PGMB/pyhtml/25.html
@@ -14,5 +14,6 @@
 <p><a href="../../etc/etc_7006.html">디지털 리터러시</a></p>
 <p><a href="../../etc/etc_9001.html">R함수</a></p>
 <p><a href="../../etc/etc_9002.html">RPA세미나 (19.03.12)</a></p>
+<p><a href="../contensts/A0000026.pdf">A0000026. 디지털전환_변화의 선두에 서다 (유덕수)</a></p>
 </body>
 </html>
