MY10 리팩토리중 241015L

--- a/office/office_0007.html
+++ b/office/office_0007.html
@@ -139,6 +139,24 @@
         </head>
         <body class="vscode-body vscode-light">
             <h1 id="맥-os">맥 OS</h1>
+<h2 id="ios-18">iOS 18</h2>
+<ul>
+<li>my 단말 : 11</li>
+<li>AI 기능
+<ul>
+<li>25년 한국어 지원 예정</li>
+<li>15이상 단말에서만 지원</li>
+</ul>
+</li>
+<li>제약사항
+<ul>
+<li>눈추적 기능 안됨</li>
+<li>Taptic 엔진</li>
+<li>실시간 오디오 전사</li>
+</ul>
+</li>
+</ul>
+<br>
 <h2 id="3벌식-변경">3벌식 변경</h2>
 <ul>
 <li>설정 - 키보드 - 입력소스
@@ -148,8 +166,9 @@
 </li>
 </ul>
 <br>
-<h2 id="맥os-버전-1276">맥OS 버전 (12.7.6)</h2>
+<h2 id="맥os-버전">맥OS 버전</h2>
 <ul>
+<li>my version : 12.7.6</li>
 <li>왼쪽 상단 - 나의맥</li>
 <li>오래되었네, 13/14/15도 있는데, 2017년도산으로 추정</li>
 </ul>
