MY10 리팩토리중 241019Lv1

--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
 <body>
 
   <br><h4>My STUDY</h4>
-<p><a href="./pyhtml/GG30.html">Study</a></p>
-<p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>기본 컴퓨터</h4>
-<p><a href="./pyhtml/GG10.html">Office</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>개발언어 </h4>
-<p><a href="./pyhtml/GG27.html">MY python Source</a></p>
-<p><a href="./pyhtml/GG11.html">python</a></p>
-<p><a href="./pyhtml/GG22.html">HTML_CSS</a></p>
-<p><a href="./pyhtml/GG23.html">Github</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>빅데이터_AI </h4>
-<p><a href="./pyhtml/GG15.html">빅데이터_기초</a></p>
-<p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
-<p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>책을 읽어요</h4>
-<p><a href="./pyhtml/GG17.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
-<p><a href="./pyhtml/GG13.html">독서_심리학</a></p>
-<p><a href="./pyhtml/GG14.html">독서_시</a></p>
-<p><a href="./pyhtml/GG26.html">독서_그림</a></p>
-<p><a href="./pyhtml/GG16.html">삶과 죽음</a></p>
-<p><a href="./pyhtml/GG18.html">2023년 독서 _ 5월이후 (13권)</a></p>
-<p><a href="./pyhtml/GG19.html">독서</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>자격증</h4>
-<p><a href="./pyhtml/GG20.html">DASP</a></p>
-<p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <br><h4>상식</h4>
-<p><a href="./pyhtml/GG12.html">차이나는 클라스</a></p>
-<p><a href="./pyhtml/GG28.html">기타등등</a></p>
-<p><a href="./pyhtml/GG29.html">영화</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
+<p><a href="./pyhtml/{row['cKey']}.html">{row['cName']}</a></p>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 
 </body>
