--- a/pyhtml/GG11.html
+++ b/pyhtml/GG11.html
@@ -8,6 +8,33 @@
 <body>
 
   <p><a href="../conhtml/mpb_0001.html">인공지능의 역사</a></p>
+<p><a href="../conhtml/mpb_0002.html">인공지능의 요소기술</a></p>
+<p><a href="../contents/A0000001.pdf">파이썬 프로그래밍 기초</a></p>
+<p><a href="../contents/A0000002.pdf">변수 및 연산자</a></p>
+<p><a href="../contents/A0000003.pdf">데이터타입</a></p>
+<p><a href="../contents/A0000004.pdf">기본제어구조(선택 및 반복)</a></p>
+<p><a href="../contents/A0000006.pdf">리스트</a></p>
+<p><a href="../contents/A0000007.pdf">튜플 / 딕셔너리</a></p>
+<p><a href="../contents/A0000008.pdf">함수 1</a></p>
+<p><a href="../contents/A0000009.pdf">함수 2</a></p>
+<p><a href="../contents/A0000011.pdf">모듈_패키지</a></p>
+<p><a href="../contents/A0000012.pdf">tkinter 1</a></p>
+<p><a href="../contents/A0000014.pdf">tkinter 2 (미작성)</a></p>
+<p><a href="../contents/A0000016.pdf">파일 1</a></p>
+<p><a href="../contents/A0000017.pdf">파일 2</a></p>
+<p><a href="../contents/A0000018.pdf">객체지향 1</a></p>
+<p><a href="../contents/A0000019.pdf">객체지향 2</a></p>
+<p><a href="../contents/A0000020.pdf">객체지향 3</a></p>
+<p><a href="../contents/A0000015.pdf">인공지능 기초</a></p>
+<p><a href="../contents/A0000021.pdf">Numpy 1</a></p>
+<p><a href="../contents/A0000022.pdf">Numpy 2</a></p>
+<p><a href="../contents/A0000023.pdf">Pandas</a></p>
+<p><a href="../contents/A0000025.pdf">Matplotlib</a></p>
+<p><a href="../study/study_0071.html">파이썬 수강</a></p>
+<p><a href="../study/study_0072.html">비전공자를 위한 첫 코딩 챌린지</a></p>
+<p><a href="../contents/A0000005.pdf">주요 함수</a></p>
+<p><a href="../contents/A0000010.pdf">주의사항</a></p>
+<p><a href="../contents/A0000013.pdf">DeBug</a></p>
 
 </body>
 </html>
