MY10 리팩토리중 241019L v18시

--- a/pyhtml/GG17.html
+++ b/pyhtml/GG17.html
@@ -8,16 +8,16 @@
 <body>
 
   <br><h4>2024년 독서</h4>
-<p><a href="./CC202001350.html">138. 한권으로 읽는 나의 문화유산답사기</a></p>
-<p><a href="./CC202001360.html">137. 아직도 악어와 악어새 이야기를 믿어</a></p>
-<p><a href="./CC202001370.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
-<p><a href="./CC202001380.html">135. 수학의 힘 (작성중)</a></p>
-<p><a href="./CC202001390.html">134. 미술관 출입증 (작성중)</a></p>
-<p><a href="./CC202001400.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
-<p><a href="./CC202001420.html">132. 더 플로</a></p>
-<p><a href="./CC202001430.html">131. 격차사회</a></p>
-<p><a href="./CC202001440.html">130. 미술관에 간 심리학</a></p>
-<p><a href="./CC202001460.html">129. AI시대의 고등교육</a></p>
+<p><a href="../book/book_0138.html.html">138. 한권으로 읽는 나의 문화유산답사기</a></p>
+<p><a href="../book/book_0137.html.html">137. 아직도 악어와 악어새 이야기를 믿어</a></p>
+<p><a href="../book/book_0136.html.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
+<p><a href="../book/book_0135.html.html">135. 수학의 힘 (작성중)</a></p>
+<p><a href="../book/book_0134.html.html">134. 미술관 출입증 (작성중)</a></p>
+<p><a href="../book/book_0133.html.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
+<p><a href="../book/book_0132.html.html">132. 더 플로</a></p>
+<p><a href="../book/book_0131.html.html">131. 격차사회</a></p>
+<p><a href="../book/book_0130.html.html">130. 미술관에 간 심리학</a></p>
+<p><a href="../book/book_0129.html.html">129. AI시대의 고등교육</a></p>
 
 </body>
 </html>
