--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -7,20 +7,17 @@
 </head>
 <body>
 
-  <br><h4>2023년 5월이후 독서</h4>
-<p><a href="../book/book_0128.html.html">128. 10대를 위한 공정하다는 착각</a></p>
-<p><a href="../book/book_0127.html.html">127. 화가가 사랑한 나무들</a></p>
-<p><a href="../book/book_0112.html.html">112. 피니시 (v4)###</a></p>
-<p><a href="../book/book_0126.html.html">126. 중학생 필독 시 (작성중)</a></p>
-<p><a href="../book/book_0125.html.html">125. 현명한 투자자 해제</a></p>
-<p><a href="../book/book_0124.html.html">124. 주식하는 마음</a></p>
-<p><a href="../book/book_0121.html.html">121. 거인의 어깨 1 (2nd)</a></p>
-<p><a href="../book/book_0123.html.html">123. 거인의 어깨 2</a></p>
-<p><a href="../book/book_0122.html.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
-<p><a href="../book/book_0120.html.html">120. 세상의 모든 법칙</a></p>
-<p><a href="../book/book_0119.html.html">119. 너도 작가가 되고 싶니?</a></p>
-<p><a href="../book/book_0118.html.html">118. 무조건 당신편</a></p>
-<p><a href="../book/book_0117.html.html">117. 너는 사람들을 도와주며 살고 싶니?</a></p>
+  <br><h4>심리학</h4>
+<p><a href="../book/book_0118.html">118. 무조건 당신편</a></p>
+<p><a href="../book/book_0113.html">113. 마음 실험실</a></p>
+<p><a href="../book/book_0108.html">108. 서른살이 심리학에게 묻다</a></p>
+<p><a href="../book/book_0102.html">102. 자제력 수업</a></p>
+<p><a href="../book/book_0095.html">095. 자존감의 여섯 기둥</a></p>
+<p><a href="../book/book_0027.html">027. 욱하는 성질 죽이기</a></p>
+<p><a href="../book/book_0026.html">026. 백곰 심리학</a></p>
+<p><a href="../book/book_0019.html">019. 가족의 두 얼굴</a></p>
+<p><a href="../book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a></p>
+<p><a href="../book/book_0051.html">051. 행복도 선택이다</a></p>
 
 </body>
 </html>
