--- a/pyhtml/GG21.html
+++ b/pyhtml/GG21.html
@@ -9,14 +9,18 @@
 
   <p><a href="../study/study_0001.html">0.소프트웨어 자산관리사 개괄 (SW자산관리사)</a></p>
 <p><a href="../study/study_0002.html">0.1 SW백문백답 (SW자산관리사)</a></p>
+<br><h4>SW일반</h4>
 <p><a href="../study/study_0003.html">1. 소프트웨어 일반 (SW자산관리사)</a></p>
+<br><h4>SW라이선스</h4>
 <p><a href="../study/study_0004.html">2. SW라이선스 (SW자산관리사)</a></p>
 <p><a href="../study/study_0005.html">2.X 주요기업 라이선스 정책 (작성중 2/6) (SW자산관리사)</a></p>
+<br><h4>SW관련법</h4>
 <p><a href="../study/study_0006.html">3.1 SW의 법적 보호 (SW자산관리사)</a></p>
 <p><a href="../study/study_0007.html">3.2 저작물과 저작자 (SW자산관리사)</a></p>
 <p><a href="../study/study_0008.html">3.3 저작권의 보호와 이용 (SW자산관리사)</a></p>
 <p><a href="../study/study_0009.html">3.4 저작권의 제한과 공정한 이용 (SW자산관리사)</a></p>
 <p><a href="../study/study_0010.html">3.5 저작권의 침해와 구제 (SW자산관리사)</a></p>
+<br><h4>SW자산관리</h4>
 <p><a href="../study/study_0011.html">4.1 소프트웨어 자산관리 일반 (SW자산관리사)</a></p>
 <p><a href="../study/study_0012.html">4.2 SAM의 구현 (SW자산관리사)</a></p>
 <p><a href="../study/study_0013.html">4.3 SAM 프로세스 (SW자산관리사)</a></p>
