--- a/pyhtml/GG26.html
+++ b/pyhtml/GG26.html
@@ -8,11 +8,11 @@
 <body>
 
   <br><h4>미술</h4>
-<p><a href="../book/book_0133.html.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
-<p><a href="../book/book_0130.html.html">130. 미술관에 간 심리학</a></p>
-<p><a href="../book/book_0127.html.html">127. 화가가 사랑한 나무들</a></p>
-<p><a href="../book/book_0107.html.html">107. The ART of 소울</a></p>
-<p><a href="../book/book_0090.html.html">090. 내가 사랑한 책</a></p>
+<p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
+<p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
+<p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
+<p><a href="../book/book_0107.html">107. The ART of 소울</a></p>
+<p><a href="../book/book_0090.html">090. 내가 사랑한 책</a></p>
 
 </body>
 </html>
